--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,10 @@
 .env.backup
 .env.production
 .phpunit.result.cache
-#Homestead.json
-#Homestead.yaml
-#auth.json
-#npm-debug.log
-#yarn-error.log
-#/.fleet
-#/.idea
-#/.vscode
+Homestead.json
+Homestead.yaml
+auth.json#npm-debug.log
+yarn-error.log
+/.fleet
+/.idea
+/.vscode
