--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
-auth.json#npm-debug.log
+auth.json
+npm-debug.log
 yarn-error.log
 /.fleet
 /.idea
